--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="Сохранить"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,6 +33,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="156dp"
         android:layout_marginTop="24dp"
+        android:checked="true"
         android:text="Заголовок"
         app:layout_constraintStart_toEndOf="@+id/single_shot"
         app:layout_constraintTop_toTopOf="parent" />
@@ -88,8 +89,8 @@
 
     <NumberPicker
         android:id="@+id/numberPicker"
-        android:layout_width="74dp"
-        android:layout_height="128dp"
+        android:layout_width="75dp"
+        android:layout_height="124dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="96dp"
         android:layout_marginTop="8dp"
@@ -100,8 +101,8 @@
 
     <NumberPicker
         android:id="@+id/numberPicker2"
-        android:layout_width="74dp"
-        android:layout_height="131dp"
+        android:layout_width="75dp"
+        android:layout_height="127dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
         android:width="100dp"
@@ -115,8 +116,9 @@
         android:id="@+id/textView2"
         android:layout_width="18dp"
         android:layout_height="21dp"
-        android:layout_marginTop="40dp"
-        android:text="ч."
+        android:layout_marginTop="16dp"
+        android:text="0"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,21 +128,22 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="мин."
+        android:layout_marginTop="16dp"
+        android:text="0"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.679"
+        app:layout_constraintHorizontal_bias="0.662"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="214dp"
-        android:layout_height="20dp"
+        android:layout_width="245dp"
+        android:layout_height="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:text="периодичность появления"
+        android:text="ч.                               мин.\n периодичность появления"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
